--- a/index.html
+++ b/index.html
@@ -219,23 +219,44 @@
       </td>
     </tr>
 
+    <tr>
+      <td>
+        6
+      </td>
+      <td class="timeam">
+        11:35 a.m-<br />12:10 p.m
+      </td>
+      <td>
+        <a href="https://us04web.zoom.us/j/77234096669?pwd=K3ZEWVp2cUJiL01LVmtFdUJVNjFhZz09">Social Science</a>
+  
+      </td>
+      <td>
+        <a href="https://us04web.zoom.us/j/73754652566?pwd=ZFpFZjZRZk9nZjhTMmhCRWVzdUFzUT09">Hindi</a>
+      </td>
+      <td>
+        <a href="https://us04web.zoom.us/j/74427330969?pwd=MUs0dnNpQW5ZRG5KWXNZRFBraElKQT09">Physics</a>
+      </td>
+      <td>
+        <a href="https://us05web.zoom.us/j/85320281829?pwd=cG5yWlJZb08rdmFCMFhsNi9hdDNJdz09">Che</a>
+        /
+        <a href="https://us04web.zoom.us/j/77809706883?pwd=U3hmT2dORUZQblVLcEJjK1lvc3hWQT09">Bio</a>
+      </td>
+      <td>
+        <a href="https://us04web.zoom.us/j/75550919961?pwd=Nzk3bXFXdEpPSTBDK2ovdUZSRGNBdz09">English</a>
+      </td>
+      <td>
+        <a href="https://us04web.zoom.us/j/73173247919">Maths</a>
+      </td>
+    </tr>
+  
+
   </table>
   <p class="note">*Click on the subject link to join zoom meeting</p>
 
   <p class="copyright">© 2021 Chirag Khatri</p>
 
 
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- horizontal -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-6146216375695702"
-     data-ad-slot="6483067890"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+  
 </html>
 
   
