--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         9:20 a.m-<br>9:55 a.m
       </td>
       <td class="hdsk">
-        <a href="https://us04web.zoom.us/j/73173247919">Maths</a>
+        <a href="https://us04web.zoom.us/j/73173247919">Maths*</a>
       </td>
       <td class="hdsk">
         <a href="https://us04web.zoom.us/j/73173247919">Maths</a>
@@ -251,9 +251,12 @@
   
 
   </table>
-  <p class="note">*Click on the subject link to join zoom meeting</p>
+  <p class="note">Click on the subject to join zoom meeting</p>
+  <p class="note">*password of Maths is 10abmaths</p>
 
-  <p class="copyright">© 2021 Chirag Khatri</p>
+  <p class="copyright">
+     © 2021 Anonymous
+  </p>
 
 
   
