--- a/index.html
+++ b/index.html
@@ -48,22 +48,22 @@
         8:35 a.m
       </td>
       <td>
-        <a href="https://us04web.zoom.us/j/73754652566?pwd=ZFpFZjZRZk9nZjhTMmhCRWVzdUFzUT09">Hindi</a>
+        <a href="https://us04web.zoom.us/j/73754652566?pwd=ZFpFZjZRZk9nZjhTMmhCRWVzdUFzUT09" target="_blank">Hindi</a>
       </td>
       <td>
-        <a href="https://us04web.zoom.us/j/73754652566?pwd=ZFpFZjZRZk9nZjhTMmhCRWVzdUFzUT09">Hindi</a>
+        <a href="https://us04web.zoom.us/j/73754652566?pwd=ZFpFZjZRZk9nZjhTMmhCRWVzdUFzUT09" target="_blank">Hindi</a>
       </td>
       <td>
-        <a href="https://us04web.zoom.us/j/73754652566?pwd=ZFpFZjZRZk9nZjhTMmhCRWVzdUFzUT09">Hindi</a>
+        <a href="https://us04web.zoom.us/j/73754652566?pwd=ZFpFZjZRZk9nZjhTMmhCRWVzdUFzUT09" target="_blank">Hindi</a>
       </td>
       <td>
-        <a href="https://us04web.zoom.us/j/73754652566?pwd=ZFpFZjZRZk9nZjhTMmhCRWVzdUFzUT09">Hindi</a>
+        <a href="https://us04web.zoom.us/j/73754652566?pwd=ZFpFZjZRZk9nZjhTMmhCRWVzdUFzUT09" target="_blank">Hindi</a>
       </td>
       <td>
        -
       </td>
       <td>
-        <a href="https://us04web.zoom.us/j/73754652566?pwd=ZFpFZjZRZk9nZjhTMmhCRWVzdUFzUT09">Hindi</a>
+        <a href="https://us04web.zoom.us/j/73754652566?pwd=ZFpFZjZRZk9nZjhTMmhCRWVzdUFzUT09" target="_blank">Hindi</a>
       </td>
     </tr>
     <tr>
@@ -74,27 +74,27 @@
         8:40 a.m-<br>9:15 a.m
       </td>
       <td>
-        <a href="https://us04web.zoom.us/j/77234096669?pwd=K3ZEWVp2cUJiL01LVmtFdUJVNjFhZz09">Social Science</a>
+        <a href="https://us04web.zoom.us/j/77234096669?pwd=K3ZEWVp2cUJiL01LVmtFdUJVNjFhZz09" target="_blank">Social Science</a>
 
       </td>
       <td>
-        <a href="https://us04web.zoom.us/j/77234096669?pwd=K3ZEWVp2cUJiL01LVmtFdUJVNjFhZz09">Social Science</a>
+        <a href="https://us04web.zoom.us/j/77234096669?pwd=K3ZEWVp2cUJiL01LVmtFdUJVNjFhZz09" target="_blank">Social Science</a>
 
       </td>
       <td>
-        <a href="https://us04web.zoom.us/j/77234096669?pwd=K3ZEWVp2cUJiL01LVmtFdUJVNjFhZz09">Social Science</a>
+        <a href="https://us04web.zoom.us/j/77234096669?pwd=K3ZEWVp2cUJiL01LVmtFdUJVNjFhZz09" target="_blank">Social Science</a>
 
       </td>
       <td>
-        <a href="https://us04web.zoom.us/j/77234096669?pwd=K3ZEWVp2cUJiL01LVmtFdUJVNjFhZz09">Social Science</a>
+        <a href="https://us04web.zoom.us/j/77234096669?pwd=K3ZEWVp2cUJiL01LVmtFdUJVNjFhZz09" target="_blank">Social Science</a>
 
       </td>
       <td>
-        <a href="https://us04web.zoom.us/j/77234096669?pwd=K3ZEWVp2cUJiL01LVmtFdUJVNjFhZz09">Social Science</a>
+        <a href="https://us04web.zoom.us/j/77234096669?pwd=K3ZEWVp2cUJiL01LVmtFdUJVNjFhZz09" target="_blank">Social Science</a>
 
       </td>
       <td>
-        <a href="https://us04web.zoom.us/j/77234096669?pwd=K3ZEWVp2cUJiL01LVmtFdUJVNjFhZz09">Social Science</a>
+        <a href="https://us04web.zoom.us/j/77234096669?pwd=K3ZEWVp2cUJiL01LVmtFdUJVNjFhZz09" target="_blank">Social Science</a>
 
       </td>
     </tr>
@@ -106,22 +106,22 @@
         9:20 a.m-<br>9:55 a.m
       </td>
       <td class="hdsk">
-        <a href="https://us04web.zoom.us/j/73173247919">Maths*</a>
+        <a href="https://us04web.zoom.us/j/73173247919" target="_blank">Maths*</a>
       </td>
       <td class="hdsk">
-        <a href="https://us04web.zoom.us/j/73173247919">Maths</a>
+        <a href="https://us04web.zoom.us/j/73173247919" target="_blank">Maths</a>
       </td>
       <td class="hdsk">
-        <a href="https://us04web.zoom.us/j/73173247919">Maths</a>
+        <a href="https://us04web.zoom.us/j/73173247919" target="_blank">Maths</a>
       </td>
       <td class="hdsk">
-        <a href="https://us04web.zoom.us/j/73173247919">Maths</a>
+        <a href="https://us04web.zoom.us/j/73173247919" target="_blank">Maths</a>
       </td>
       <td>
-        <a href="https://us04web.zoom.us/j/73173247919">Maths</a>
+        <a href="https://us04web.zoom.us/j/73173247919" target="_blank">Maths</a>
       </td>
       <td class="hdsk">
-        <a href="https://us04web.zoom.us/j/73173247919">Maths</a>
+        <a href="https://us04web.zoom.us/j/73173247919" target="_blank">Maths</a>
       </td>
     </tr>
     <tr>
@@ -132,34 +132,34 @@
         10:00 a.m-<br>10:35 a.m
       </td>
       <td>
-        <a href="https://us04web.zoom.us/j/74427330969?pwd=MUs0dnNpQW5ZRG5KWXNZRFBraElKQT09">Science<br />
+        <a href="https://us04web.zoom.us/j/74427330969?pwd=MUs0dnNpQW5ZRG5KWXNZRFBraElKQT09" target="_blank">Science<br />
           (Physics)</a>
         
 
       </td>
       <td>
-        <a href="https://us04web.zoom.us/j/74427330969?pwd=MUs0dnNpQW5ZRG5KWXNZRFBraElKQT09">Science<br />
+        <a href="https://us04web.zoom.us/j/74427330969?pwd=MUs0dnNpQW5ZRG5KWXNZRFBraElKQT09" target="_blank">Science<br />
           (Physics)</a>
       </td>
       <td>
-        <a href="https://us05web.zoom.us/j/85320281829?pwd=cG5yWlJZb08rdmFCMFhsNi9hdDNJdz09">Science<br />
+        <a href="https://us05web.zoom.us/j/85320281829?pwd=cG5yWlJZb08rdmFCMFhsNi9hdDNJdz09" target="_blank">Science<br />
 (Chemistry)</a>
 
 
       </td>
       <td>
-        <a href="https://us05web.zoom.us/j/85320281829?pwd=cG5yWlJZb08rdmFCMFhsNi9hdDNJdz09">Science<br />
+        <a href="https://us05web.zoom.us/j/85320281829?pwd=cG5yWlJZb08rdmFCMFhsNi9hdDNJdz09" target="_blank">Science<br />
           (Chemistry)</a>
 
       </td>
       <td>
-        <a href="https://us04web.zoom.us/j/77809706883?pwd=U3hmT2dORUZQblVLcEJjK1lvc3hWQT09">Science<br />
+        <a href="https://us04web.zoom.us/j/77809706883?pwd=U3hmT2dORUZQblVLcEJjK1lvc3hWQT09" target="_blank">Science<br />
 (Biology)</a>
 
 
       </td>
       <td>
-        <a href="https://us04web.zoom.us/j/77809706883?pwd=U3hmT2dORUZQblVLcEJjK1lvc3hWQT09">Science<br />
+        <a href="https://us04web.zoom.us/j/77809706883?pwd=U3hmT2dORUZQblVLcEJjK1lvc3hWQT09" target="_blank">Science<br />
           (Biology)</a>
 
       </td>
@@ -199,23 +199,23 @@
         10:55 a.m-<br />11:30 a.m
       </td>
       <td>
-        <a href="https://us04web.zoom.us/j/75550919961?pwd=Nzk3bXFXdEpPSTBDK2ovdUZSRGNBdz09">English</a>
+        <a href="https://us04web.zoom.us/j/75550919961?pwd=Nzk3bXFXdEpPSTBDK2ovdUZSRGNBdz09" target="_blank">English</a>
 
       </td>
       <td>
-        <a href="https://us04web.zoom.us/j/75550919961?pwd=Nzk3bXFXdEpPSTBDK2ovdUZSRGNBdz09">English</a>
+        <a href="https://us04web.zoom.us/j/75550919961?pwd=Nzk3bXFXdEpPSTBDK2ovdUZSRGNBdz09" target="_blank">English</a>
       </td>
       <td>
-        <a href="https://us04web.zoom.us/j/75550919961?pwd=Nzk3bXFXdEpPSTBDK2ovdUZSRGNBdz09">English</a>
+        <a href="https://us04web.zoom.us/j/75550919961?pwd=Nzk3bXFXdEpPSTBDK2ovdUZSRGNBdz09" target="_blank">English</a>
       </td>
       <td>
-        <a href="https://us04web.zoom.us/j/75550919961?pwd=Nzk3bXFXdEpPSTBDK2ovdUZSRGNBdz09">English</a>
+        <a href="https://us04web.zoom.us/j/75550919961?pwd=Nzk3bXFXdEpPSTBDK2ovdUZSRGNBdz09" target="_blank">English</a>
       </td>
       <td>
-        <a href="https://us04web.zoom.us/j/75550919961?pwd=Nzk3bXFXdEpPSTBDK2ovdUZSRGNBdz09">English</a>
+        <a href="https://us04web.zoom.us/j/75550919961?pwd=Nzk3bXFXdEpPSTBDK2ovdUZSRGNBdz09" target="_blank">English</a>
       </td>
       <td>
-        <a href="https://us04web.zoom.us/j/75550919961?pwd=Nzk3bXFXdEpPSTBDK2ovdUZSRGNBdz09">English</a>
+        <a href="https://us04web.zoom.us/j/75550919961?pwd=Nzk3bXFXdEpPSTBDK2ovdUZSRGNBdz09" target="_blank">English</a>
       </td>
     </tr>
 
@@ -227,25 +227,25 @@
         11:35 a.m-<br />12:10 p.m
       </td>
       <td>
-        <a href="https://us04web.zoom.us/j/77234096669?pwd=K3ZEWVp2cUJiL01LVmtFdUJVNjFhZz09">Social Science</a>
+        <a href="https://us04web.zoom.us/j/77234096669?pwd=K3ZEWVp2cUJiL01LVmtFdUJVNjFhZz09" target="_blank">Social Science</a>
   
       </td>
       <td>
-        <a href="https://us04web.zoom.us/j/73754652566?pwd=ZFpFZjZRZk9nZjhTMmhCRWVzdUFzUT09">Hindi</a>
+        <a href="https://us04web.zoom.us/j/73754652566?pwd=ZFpFZjZRZk9nZjhTMmhCRWVzdUFzUT09" target="_blank">Hindi</a>
       </td>
       <td>
-        <a href="https://us04web.zoom.us/j/74427330969?pwd=MUs0dnNpQW5ZRG5KWXNZRFBraElKQT09">Physics</a>
+        <a href="https://us04web.zoom.us/j/74427330969?pwd=MUs0dnNpQW5ZRG5KWXNZRFBraElKQT09" target="_blank">Physics</a>
       </td>
       <td>
-        <a href="https://us05web.zoom.us/j/85320281829?pwd=cG5yWlJZb08rdmFCMFhsNi9hdDNJdz09">Che</a>
+        <a href="https://us05web.zoom.us/j/85320281829?pwd=cG5yWlJZb08rdmFCMFhsNi9hdDNJdz09" target="_blank">Che</a>
         /
-        <a href="https://us04web.zoom.us/j/77809706883?pwd=U3hmT2dORUZQblVLcEJjK1lvc3hWQT09">Bio</a>
+        <a href="https://us04web.zoom.us/j/77809706883?pwd=U3hmT2dORUZQblVLcEJjK1lvc3hWQT09" target="_blank">Bio</a>
       </td>
       <td>
-        <a href="https://us04web.zoom.us/j/75550919961?pwd=Nzk3bXFXdEpPSTBDK2ovdUZSRGNBdz09">English</a>
+        <a href="https://us04web.zoom.us/j/75550919961?pwd=Nzk3bXFXdEpPSTBDK2ovdUZSRGNBdz09" target="_blank">English</a>
       </td>
       <td>
-        <a href="https://us04web.zoom.us/j/73173247919">Maths</a>
+        <a href="https://us04web.zoom.us/j/73173247919" target="_blank">Maths</a>
       </td>
     </tr>
   
