--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
   <p class="note">*password of Maths is 10abmaths</p>
 
   <p class="copyright">
-     © 2021 Anonymous
+     © 2021 Chirag Khatri
   </p>
 
 
